--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -171,6 +171,9 @@
   text-align: center;
   margin: 10% auto;
   display: inline-block;
+  @include media-query($on-mobile) {
+    display: unset;
+  }
 
   .author-avatar {
     object-fit: cover;
@@ -203,8 +206,8 @@
   .about-avatar {
     img {
       border-radius: 100px;
-      max-width: 20vw;
-      max-height: 20vh;
+      max-width: 30vw;
+      max-height: 30vh;
 
       @include media-query($on-mobile) {
         max-height: 75vh;
@@ -231,7 +234,7 @@
 
 .author:has(> div.about-avatar) {
   @include media-query($on-mobile) {
-    margin: 1%;
+    margin: 5%;
   }
 }
 
